k8s/traefik_custom/traefik-deployment-neat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: traefik
  name: traefik
  namespace: my-media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - args:
        - --configfile=/config/traefik.yml
        image: traefik:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 15
        name: traefik
        ports:
        - containerPort: 80
          name: web
          protocol: TCP
        - containerPort: 443
          name: websecure
          protocol: TCP
        - containerPort: 8080
          name: admin
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 256Mi
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        - mountPath: /certs
          name: certs
        - mountPath: /config/traefik.yml
          name: traefik-config
          readOnly: true
          subPath: traefik.yml
      hostname: traefik
      restartPolicy: Always
      securityContext:
        fsGroup: 989
        runAsGroup: 989
        runAsUser: 1001
        sysctls:
        - name: net.ipv6.conf.all.disable_ipv6
          value: "1"
      serviceAccountName: traefik
      volumes:
      - hostPath:
          path: /home/ubuntu/my-media-stack/certs
          type: DirectoryOrCreate
        name: certs
      - configMap:
          name: traefik-config
        name: traefik-config
