k8s/traefik_custom/traefik-service-neat.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
  name: traefik
  namespace: my-media-stack
spec:
  ports:
  - name: web
    port: 80
  - name: websecure
    port: 443
  selector:
    app: traefik
  type: LoadBalancer
