k8s/traefik_custom/traefik-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: my-media-stack
  labels:
    app: traefik
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      targetPort: 80
      protocol: TCP
    - name: websecure
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app: traefik

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: my-media-stack
  labels:
    app: traefik
spec:
  type: ClusterIP
  ports:
    - name: admin
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: traefik
