k8s/traefik_custom/traefik-ingressroute-neat.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: my-media-stack
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`traefik.beatapostapita.duckdns.org`)
    services:
    - name: traefik-dashboard
      port: 8080
  tls:
    certResolver: bolabaden_duckdns_letsencrypt
