k8s/traefik_custom/traefik-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: my-media-stack
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.beatapostapita.duckdns.org`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 8080
  tls:
    certResolver: bolabaden_duckdns_letsencrypt

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
  namespace: my-media-stack
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.beatapostapita.duckdns.org`)
      kind: Rule
      services:
        - name: traefik-dashboard
          port: 8080
